# Helix

./: .gitignore  CLAUDE.md  CLAUDE_CONTROLLER.md  CONTINUATION-PROMPT.md  HANDOFF-MCP-SERVER-032.md  KNOWN-BUGS.md  NEXT_SESSION_PROMPT.md  ONBOARDING.md  README.md  implementation-summary.md  pyproject.toml  pytest.ini  start-phase-openrouter.sh  start-phase.sh  test-openrouter.sh  verification-report.md  verification-summary.md
.claude-async/: current_run
adr/: 000-vision-and-architecture.md  001-adr-as-single-source-of-truth.md  001-template-and-context-system.md  002-quality-gate-system.md  003-observability-and-debugging.md  004-escalation-meeting-system.md  005-consultant-topology-agentic-meetings.md  006-dynamic-phase-definition.md  007-multi-provider-llm-configuration.md  008-implementation-spec-schema.md  009-bootstrap-project.md  010-adr-migration-from-v3.md  011-post-phase-verification.md  012-adr-as-single-source-of-truth.md  013-debug-observability-engine-für-helix-workflows.md  014-documentation-architecture.md  015-approval-validation-system.md  017-phase-orchestrator.md  018-lsp-integration.md  019-documentation-as-code.md  021-async-cli-background-jobs.md  022-unified-api-architecture.md  023-workflow-definitions.md  024-consultant-workflow-knowledge.md  025-sub-agent-verification.md  026-dynamic-phase-generation.md  027-stale-response-bugfix---open-webui-integration.md  030-evolution-pipeline-reliability.md.backup  036-streaming-completion-signal.md  038-deterministic-llm-response-enforcement.md  040-ralph-automation-pattern.md  INDEX.md  (+2 more)
(+1345 files in other folders)
